# adventurer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cuda  README.md
.github/workflows/: ci.yml  release.yml
assets/steam/: README.md
crates/inference-llm/: Cargo.toml
crates/inference-llm/src/: lib.rs  llm.rs
crates/inference-stt/: Cargo.toml
crates/inference-stt/src/: lib.rs  stt.rs
crates/llm-bench/: Cargo.toml
crates/llm-bench/src/: main.rs  worker.rs
crates/server/: Cargo.toml
crates/server/assets/client/: dev-reload.js  gamepad.js  qr-modal.js  transcript-style.js
crates/server/assets/player/: index.html  player.css  player.js
crates/server/src/: api.rs  config.rs  embed.rs  gemma.rs  lan.rs  main.rs  players.rs  state.rs  sync.rs  workers.rs  ws.rs
crates/stt-bench/: Cargo.toml
crates/stt-bench/src/: main.rs  worker.rs
docs/: extensions.md
prompts/: state.txt
samples/: party.md  transcript.md
scripts/: add-to-steam.py  adventurer.desktop  install-steam-art.py  launch.sh  run.sh
src/: main.rs
