[package]
name = "adventurer"
version = "0.0.1"
edition = "2021"
description = "Proof-of-concept: gemma3 state extraction via llama-cpp-rs, replacing the Ollama HTTP call from dnd-stage"
license = "MIT"

[[bin]]
name = "adventurer-poc"
path = "src/main.rs"

[dependencies]
llama-cpp-2 = { version = "0.1.145", default-features = false, features = ["openmp"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
# Enable CUDA support (requires CUDA toolkit + nvcc on the build host)
cuda = ["llama-cpp-2/cuda"]
# CUDA without Virtual Memory Management — needed when running CUDA inside containers
# where VMM may not be available (e.g. some CDI passthrough setups).
cuda-no-vmm = ["llama-cpp-2/cuda-no-vmm"]
# Enable Vulkan support (more portable than CUDA, slower)
vulkan = ["llama-cpp-2/vulkan"]
# macOS only
metal = ["llama-cpp-2/metal"]

[profile.release]
lto = "thin"
codegen-units = 1
