[workspace]
resolver = "2"
members = [
    # Inference engines — split into two crates because llama.cpp and whisper.cpp
    # each vendor their own ggml; linking both into one binary produces a
    # runtime-crashing executable. The server runs them as separate worker
    # processes and talks to them via stdin/stdout JSON.
    "crates/inference-llm",
    "crates/inference-stt",
    "crates/server",
    "crates/llm-bench",
    "crates/stt-bench",
]
default-members = [
    # Building the workspace by default builds the server (the actual product).
    # Benches are opt-in via `cargo build -p adventurer-llm-bench` etc.
    "crates/server",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Doug Hatcher <doug@hatcher.ltd>"]
repository = "https://github.com/doughatcher/adventurer"

[workspace.dependencies]
# Inference engines (heavy native deps — keep on workspace level for version sync)
llama-cpp-2 = { version = "0.1.145", default-features = false, features = ["openmp"] }
whisper-rs  = { version = "0.16",    default-features = false, features = ["openmp"] }

# Async + HTTP
tokio   = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util", "io-std", "process", "fs", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI + errors + logging
clap   = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
