[package]
name        = "adventurer-stt-bench"
description = "Bench: in-process whisper.cpp transcription A/B against Speaches"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[[bin]]
name = "adventurer-stt-bench"
path = "src/main.rs"

[dependencies]
adventurer-inference-stt = { path = "../inference-stt" }
clap    = { workspace = true }
anyhow  = { workspace = true }
serde   = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio   = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64  = "0.22"

[features]
default = []
cuda    = ["adventurer-inference-stt/cuda"]
vulkan  = ["adventurer-inference-stt/vulkan"]
metal   = ["adventurer-inference-stt/metal"]
